# comp-math-lab1

./: Cargo.toml
src/: input.rs  main.rs  solver.rs
test-cases/: empty.json  incompatible.json  incorrect_rhs.json  incorrect_row_size.json  incorrect_rows_count.json  small.json  tema.json  test.json  test_precision.json  zero.json
