[package]
name = "guess-zeidel-method"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
inquire = "0.6.2"
